# python-lab

./: README.md
concurrency/: cpu-bound-threading.py  io-bound-threading.py  multiprocessing-example.py  multiprocessing-pool.py  single-thread.py
exercises/: 01-generators.py  02-decorators.py  03-list_comprehensions.py
lora_sat_decoder/: README.md  lora_sat_decoder.py  norby.py  pyproject.toml  tianqi.py
pytest-demo/: .coverage  README.md  pyproject.toml
pytest-demo/pytest_demo/: strings.py
pytest-demo/tests/: conftest.py
pytest-demo/tests/fixtures/: fixture_artifact.py
pytest-demo/tests/test_functions/: test_mark.py  test_math_numbers.py  test_strings.py
wav-explore/: pyproject.toml  wav_explore.py
