[tool.poetry]
name = "wav-explore"
version = "0.1.0"
description = ""
authors = ["Manuel Rabade <manuel@rabade.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pyqt6 = "^6.7.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
